Log warning if invalid or unsupported JVM GC options are used